<resources>
    <string name="app_name">ClassMate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_course">Create Course</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_course_view">Course Details</string>
    <string name="title_activity_join_course">Join Course</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <string name="missingUserName">Please enter in your username</string>
    <string name="missingPassword">Please enter in your password</string>
    <string name="failedLogin">Username or Password incorrect please try again</string>

    <string name="course_code">Course Code</string>
    <string name="course_section">Section</string>
    <string name="course_name">Name</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="course_desc">Description</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="create">Create</string>
    <string name="course_instructor_label">Instructor:</string>
    <string name="course_date_label">Date:</string>
    <string name="course_section_label">Section:</string>

    <string name="event_list_head">Events</string>
    <string name="event_course_code_label">Course Code:</string>
    <string name="event_course_name_label">Course Name:</string>
    <string name="event_due_date_label">Due Date:</string>
    <string name="event_final_grade_weight_label">Final Grade Weight:</string>
    <string name="event_description_label">Description:</string>
    <string name="event_discussion_head">Discussion</string>

    <string name="logout">Logout</string>
    <string name="account_info">Account Info</string>
    <string name="email_address">Email Address</string>
    <string name="about_you">About You</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>

    <string name="confirm_leave_course_title">Leave Course</string>
    <string name="confirm_leave_course" formatted="false">Do you want to leave \'%s - %s\'?</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="empty_course_list_message">Welcome!\n\nGet started by adding some courses.</string>

    <string name="empty_event_list_message">You have no events.</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_event_view">Event Details</string>

    <string name="eventName">Event Name</string>
    <string name="due">Due Date:</string>
    <string name="description">Description</string>
    <string name="gradeWorth">Percent Of Final Grade</string>
    <string name="createEvent">Create Event</string>
    <string name ="course">Course:</string>
    <string name="type">Type:</string>
    <string name="course_has_no_events">This course has no events.\nAdd one!</string>

    <string name="submit">Submit</string>
</resources>
