<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.prog3210.classmate.courses.CreateCourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_details_head"
            style="@style/TextAppearance.AppCompat.Large"/>

        <EditText
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_code"/>
        <EditText
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_section"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"/>
        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/year"/>
        <Spinner
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/create_course_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create" />
</LinearLayout>
