<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prog3210.classmate.courses.CourseViewActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/course_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:visibility="gone">
        <TextView
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/course_section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_section_label"/>

            <TextView
                android:id="@+id/course_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_section_label"
                android:layout_alignBaseline="@id/course_section_label"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/course_instructor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_instructor_label"
                android:layout_below="@id/course_section_label"/>

            <TextView
                android:id="@+id/course_instructor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_instructor_label"
                android:layout_alignBaseline="@id/course_instructor_label"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/course_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_date_label"
                android:layout_below="@id/course_instructor_label"/>

            <TextView
                android:id="@+id/course_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/course_date_label"
                android:layout_alignBaseline="@id/course_date_label"
                android:paddingLeft="5dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/event_list_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_list_head"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <!-- TODO: Put the event list frame here -->
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>