<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.prog3210.classmate.courses.CourseViewActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:id="@+id/even_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/TextAppearance.AppCompat.Headline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_below="@id/event_name">

                    <TextView
                        android:id="@+id/event_course_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_course_label"/>

                    <TextView
                        android:id="@+id/event_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:layout_alignBaseline="@id/event_course_label"
                        android:layout_toRightOf="@id/event_course_label"/>

                    <TextView
                        android:id="@+id/event_due_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_due_date_label"
                        android:layout_below="@id/event_course_label"/>

                    <TextView
                        android:id="@+id/event_due_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:layout_alignBaseline="@id/event_due_date_label"
                        android:layout_toRightOf="@id/event_due_date_label"/>

                    <TextView
                        android:id="@+id/event_final_grade_weight_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_final_grade_weight_label"
                        android:layout_below="@id/event_due_date_label"/>

                    <TextView
                        android:id="@+id/event_final_grade_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:layout_alignBaseline="@id/event_final_grade_weight_label"
                        android:layout_toRightOf="@id/event_final_grade_weight_label"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <Button
                        android:id="@+id/event_upvote_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="10 uppies"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@color/upvote_color"/>

                    <Button
                        android:id="@+id/event_downvote_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="2 downies"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@color/downvote_color"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/event_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description_label"/>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_comments_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@id/even_details_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COMMENTS!!!!!!1!"
                style="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Justin says: eat shit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kyle says: eat shit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sean says: give me a fork"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>